Fix datepicker z-index

--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -285,38 +285,43 @@ body:before {
 }
 
 /* line 128, ../scss/base/_base.scss */
+.datepicker {
+  z-index: 100;
+}
+
+/* line 132, ../scss/base/_base.scss */
 textarea {
   font-family: 'Titillium Web', sans-serif;
   cursor: text;
 }
 
-/* line 133, ../scss/base/_base.scss */
+/* line 137, ../scss/base/_base.scss */
 a {
   text-decoration: none;
   cursor: pointer;
 }
 
-/* line 137, ../scss/base/_base.scss */
+/* line 141, ../scss/base/_base.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 141, ../scss/base/_base.scss */
+/* line 145, ../scss/base/_base.scss */
 [class^="icon-"], [class*=" icon-"], label {
   cursor: pointer;
 }
 
-/* line 145, ../scss/base/_base.scss */
+/* line 149, ../scss/base/_base.scss */
 strong {
   font-weight: bold !important;
 }
 
-/* line 149, ../scss/base/_base.scss */
+/* line 153, ../scss/base/_base.scss */
 p {
   margin: 0;
 }
 
-/* line 153, ../scss/base/_base.scss */
+/* line 157, ../scss/base/_base.scss */
 img {
   max-width: 100%;
 }
